# edex-custom

./: CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  SUMMARY.md  biome.json  package.json  pnpm-lock.yaml  renovate.json
.github/workflows/: main.yml
scripts/: build-local.ps1
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/sys/: main.rs
src/components/setting/: index.tsx
src/components/terminal/: session.tsx  tab.tsx
src/lib/queries/: index.ts
src/lib/setting/: index.ts
src/lib/themes/: styles.ts
